WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
300117
[Site Isolation] Color pickers are presented at the wrong location
https://bugs.webkit.org/show_bug.cgi?id=300117
Summary
[Site Isolation] Color pickers are presented at the wrong location
Aditya Keerthi
Reported
2025-10-03 10:08:34 PDT
SSIA
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-10-03 10:08:45 PDT
<
rdar://problem/161903415
>
Aditya Keerthi
Comment 2
2025-10-03 10:14:37 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51762
EWS
Comment 3
2025-10-06 08:24:35 PDT
Committed
301062@main
(f4cc8ce25d0f): <
https://commits.webkit.org/301062@main
> Reviewed commits have been landed. Closing PR #51762 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug