[Site Isolation] Color pickers are presented at the wrong location https://bugs.webkit.org/show_bug.cgi?id=300117 rdar://161903415

Reviewed by Tim Horton, Abrar Rahman Protyasha, and Lily Spiniolas.

iframe processes cannot convert to root view coordinates, resulting in the
popover being presented at the wrong location.

Fix by converting the rect in the UI process.

* Source/WebCore/html/ColorInputType.cpp:
(WebCore::ColorInputType::rootFrameID const):
* Source/WebCore/html/ColorInputType.h:
* Source/WebCore/platform/ColorChooserClient.h:
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::showColorPicker):
* Source/WebKit/UIProcess/WebPageProxy.h:
* Source/WebKit/UIProcess/WebPageProxy.messages.in:
* Source/WebKit/WebProcess/WebCoreSupport/WebColorChooser.cpp:
(WebKit::WebColorChooser::WebColorChooser):
(WebKit::WebColorChooser::reattachColorChooser):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/SiteIsolation.mm:
(TestWebKitAPI::(SiteIsolation, ColorInputPickerLocation)):

Canonical link: https://commits.webkit.org/301062@main